<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.lasalle.pprog2.profileform.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:text="@string/profile_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:id="@+id/name_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_title"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_textview"/>

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/name_textview"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname_edittext"/>

            <EditText
                android:id="@+id/surname_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/surname_edittext"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gender_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_layout"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_title" />

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male"
                    android:layout_weight="1"
                    android:id="@+id/male_radiobutton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female"
                    android:layout_weight="1"
                    android:id="@+id/female_radiobutton" />

                <RadioButton
                    android:id="@+id/other_gender_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_other"
                    android:layout_weight="1"
                    android:checked="true"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/country_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_layout"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/country_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/country_spinner"
                android:entries="@array/spinner_values"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/preferred_volume_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/country_layout"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/preferred_volume_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_volume_min"
                    android:id="@+id/draw_volume_min"
                    android:layout_weight="0" />

                <SeekBar
                    android:id="@+id/volume_seekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="50"
                    android:scrollbarAlwaysDrawVerticalTrack="false"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_volume_max"
                    android:id="@+id/draw_volume_max"
                    android:layout_weight="0" />
            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:text="@string/save_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/preferred_volume_layout"
            android:layout_centerHorizontal="true"
            android:onClick="onButtonSaveClick"/>

    </RelativeLayout>


</ScrollView>
